[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.27.0", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
tui = "0.19.0"
